# portfolio_website

./: rough.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: data.py  main.py  main_backup.py
client/: package-lock.json  package.json
client/src/: App.css  App.js  App2.js  AppNew.js  app.css  app2.css  appnew.css  index.js  map.txt
client/src/Components/: Gallery.js  Home.js  Projects.js  Skills.js  gallery.css  home.css  projects.css  skills.css
client/src/Components2/: Home.js  Journey.js  Projects.css  Projects.js  Skills2.js  SkillsCloud.js  home.css  journey.css  skills2.css  skillscloud.css
client/src/Components3/: AppNew.js  Projects.js  a.css  p.css
client/src/Components4/: App.js  ColorOs.js  NewProjects.js  Profile.js  app.css  co.css  np.css  pp.css
client/src/Experiments/: GenericGrid.js  Grid.js  Object.js  SideProjects.js  SkillGrid.js  c.css  grid.css  kl.css  sp.css
client/src/Final/: App.js  Contact.js  Home.js  Projects.js  SkillsPage.js  app.css  con.css  home.css  projects.css  skillspage.css
client/src/New/: AppN.js  Contact.js  Projects.js  appn.css  con.css  projects.css
client/src/Portal/: App.css  App.js  App3.js  Home.js  Profile.js  ProjectSkillsContainer.js  Projects.js  Skills.js  appp.css  homi.css  profile.css  projects.css  ps.css  skills.css
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AboutSection.tsx  (+14 more)
frontend_new/: package-lock.json  package.json
frontend_old/: package-lock.json  package.json
(+33 files in other folders)
